--- a/index.html
+++ b/index.html
@@ -2,22 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>preITP的头像制造机器</title>
+    <title>14ITP的名片制造机</title>
     <link href="style/style.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
-    <img src="img/logo.jpg" style="display: none">;
+    <img src="img/card.png" style="display: none">
     <div class="logo">
-        <div class="name">(你的名字)</div>
+        <div class="name">雪宝宝</div>
+        <div class="major">德语</div>
+        <div class="qqID">123456789</div>
+        <div class="weixinID">123456789</div>
+        <div class="phoneNm">12345678909</div>
+        <div class="mailAd">xuebaobao@itp.org</div>
+        <div class="QRcode"></div>
+        <div class="QRmask"></div>
     </div>
     <form class="center">
         姓名：
-        <input id="name" type="text" value=""></input>
+        <input id="name" type="text" value="" ></input>
+        专业：
+        <input id="major" type="text" value=""></input><br>
+        QQ：
+        <input id="qqID" type="text" value=""></input>
+        微信：
+        <input id="weixinID" type="text" value=""></input><br>
+        手机：
+        <input id="phoneNm" type="text" value=""></input>
+        邮箱：
+        <input id="mailAd" type="text" value=""></input><br>
+        <div class="wrap">
+            上传裁切好的二维码
+            <input class="upload-photo" type='file' onchange="readURL(this);" />
+        </div>
+
     </form>
     <div class="next"></div>
-    <button onclick="getName()" ">提交</button>
-	<button onclick="createImg() "">生成头像</button>
+    <button onclick="commit()" ">提交</button>
+	<button onclick="createImg() "">生成名片</button>
     <p>*一开始载入有较大延时是在下载字体文件请等待么么哒</p>
     <p>**生成头像后长按下面的图片即可保存（头像有轻微失真）</p>
     <p>***如果无法出现保存选项请双击屏幕放大后再长按</p>
@@ -26,20 +48,38 @@
 <script type="text/javascript" src="framework/html2canvas0.5.1.js"></script>
 <script type="text/javascript" src="js/post.js"></script>
 <script>
-function getName() {
+function commit() {
     var name = $("#name").val();
-    console.log(name);
+    var major= $("#major").val();
+    var qqID = $("#qqID").val();
+    var wxID = $("#weixinID").val();
+    var pNm  = $("#phoneNm").val();
+    var mAd  = $("#mailAd").val();
+
     var namePrint = $(".name");
+    var majorPrint = $(".major");
+    var qqPrint = $(".qqID");
+    var wxPrint = $(".weixinID");
+    var pNPrint = $(".phoneNm");
+    var mailPrint = $(".mailAd");
+
     namePrint.text(name);
+    majorPrint.text(major);
+    qqPrint.text(qqID);
+    wxPrint.text(wxID);
+    pNPrint.text(pNm);
+    mailPrint.text(mAd);
 };
 
 function createImg() {
     html2canvas($(".logo"), {
         onrendered: function(canvas) {
             //生成img
+
             canvas.toBlob(function(blob) {
                 post(blob);
             });
+
             var dataUrl = canvas.toDataURL();
             var newImg = document.createElement("img");
             newImg.src = dataUrl;
@@ -48,6 +88,21 @@ function createImg() {
         }
     })
 };
+
+function readURL(input)
+{
+     if (input.files && input.files[0]) {
+         var reader = new FileReader();
+
+         reader.onload = function (e) {
+             $(".QRcode")
+                 .css('background-image', 'url('+e.target.result+')');
+         };
+
+         reader.readAsDataURL(input.files[0]);
+     }
+}
+
 
 $(document).ready({
 
